# terminalslide

./: .gitignore  CONTRIBUTING.md  LICENSE  pyproject.toml  readme.md  starter.md
.github/workflows/: publish.yml
terminalslide/: editor.py  keybinds.py  main.py  overview.py  parser.py  pdf_export.py  renderer.py  themes.py  timer.py  watcher.py
terminalslide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
